BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_AmbitoCluster__c.field-meta.xml
<CustomField>
    <fullName>CRM_AmbitoCluster__c</fullName>
    <label>Ambito Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRODOTTI &amp; SERVIZI</fullName>
            </value>
            <value>
                <fullName>CANALI</fullName>
            </value>
            <value>
                <fullName>ORGANIZZAZONE &amp; MODELLI DI SERVIZIO</fullName>
            </value>
            <value>
                <fullName>LEGALE</fullName>
            </value>
            <value>
                <fullName>CUSTOMER HELP CENTER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>