BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_AnomalyEndDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_AnomalyEndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anomaly End Date</label>
    <type>DateTime</type>
</CustomField>