BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_AnomalyStartDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_AnomalyStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anomaly Start Date</label>
    <type>DateTime</type>
</CustomField>