BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_AnomalyStatus__c.field-meta.xml
<CustomField>
    <fullName>CRM_AnomalyStatus__c</fullName>
    <label>Anomaly Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>