BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_Answer2__c.field-meta.xml
<CustomField>
    <fullName>CRM_Answer2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>