BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_Area__c.field-meta.xml
<CustomField>
    <fullName>CRM_Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Services</fullName>
            </value>
            <value>
                <fullName>Cards</fullName>
            </value>
            <value>
                <fullName>Other products and services</fullName>
            </value>
            <value>
                <fullName>Channels</fullName>
            </value>
            <value>
                <fullName>BPER Group</fullName>
            </value>
            <value>
                <fullName>Extraordinary operations</fullName>
            </value>
            <value>
                <fullName>Guida operativa</fullName>
            </value>
            <value>
                <fullName>Guida applicativo</fullName>
            </value>
            <value>
                <fullName>Guida Salesforce</fullName>
            </value>
            <value>
                <fullName>Not Classifiable</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>