BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_BloccoCreazioneArticolo__c.field-meta.xml
<CustomField>
    <fullName>CRM_BloccoCreazioneArticolo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocco creazione articolo</label>
    <type>Checkbox</type>
</CustomField>