BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_Classificazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_Classificazione__c</fullName>
    <label>Classificazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commerciale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>