BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_Cluster__c.field-meta.xml
<CustomField>
    <fullName>CRM_Cluster__c</fullName>
    <label>Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CRM_AmbitoCluster__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CONTI_CORRENTI_E_DEPOSITI_RISPARMIO</fullName>
            </value>
            <value>
                <fullName>ASSEGNI</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>CARTE</fullName>
            </value>
            <value>
                <fullName>CANALI_IB_APP</fullName>
            </value>
            <value>
                <fullName>CANALI_CBI</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>FINANZIAMENTI</fullName>
            </value>
            <value>
                <fullName>FINANZA_VITA</fullName>
            </value>
            <value>
                <fullName>PAGAMENTI</fullName>
            </value>
            <value>
                <fullName>CONTACT_CENTER</fullName>
            </value>
            <value>
                <fullName>PRICING</fullName>
            </value>
            <value>
                <fullName>CONDIZIONI</fullName>
            </value>
            <value>
                <fullName>BANCASSURANCE_DANNI</fullName>
            </value>
            <value>
                <fullName>ESTERO</fullName>
            </value>
            <value>
                <fullName>SUCCESSIONI</fullName>
            </value>
            <value>
                <fullName>TESORERIA</fullName>
            </value>
            <value>
                <fullName>PROCESSI</fullName>
            </value>
            <value>
                <fullName>IMPRESE</fullName>
            </value>
            <value>
                <fullName>PRIVATE_BANKING</fullName>
            </value>
            <value>
                <fullName>CREDITI</fullName>
            </value>
            <value>
                <fullName>LEGALE</fullName>
            </value>
            <value>
                <fullName>CASSETTE_DI_SICUREZZA</fullName>
            </value>
            <value>
                <fullName>LOGIN_INIZIALE_CON_CODICI_DI_ACCESSO_UBI</fullName>
                <label>LOGIN_INIZIALE_CON_CODICI_DI_ACCESSO</label>
            </value>
            <value>
                <fullName>VERIFICA_CONTATTI</fullName>
            </value>
            <value>
                <fullName>VERIFICA_PRODOTTI</fullName>
            </value>
            <value>
                <fullName>CREAZIONE_NUOVE_CREDENZIALI_BPER_SMART</fullName>
            </value>
            <value>
                <fullName>ACCESSO_CON_NUOVE_CREDENZIALI_BPER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>