BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_Description2__c.field-meta.xml
<CustomField>
    <fullName>CRM_Description2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>