BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_IDFAQHelpCenter__c.field-meta.xml
<CustomField>
    <fullName>CRM_IDFAQHelpCenter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID FAQ Help Center</label>
    <length>20</length>
    <type>Text</type>
</CustomField>