BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_IsApprovedArticle__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsApprovedArticle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is approved article</label>
    <type>Checkbox</type>
</CustomField>