BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_IsRejectedArticle__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsRejectedArticle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is rejected article</label>
    <type>Checkbox</type>
</CustomField>