BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_IsSubmittedArticle__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsSubmittedArticle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is submitted article</label>
    <type>Checkbox</type>
</CustomField>