BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_LastEdit__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastEdit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Edit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>