BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_Level1__c.field-meta.xml
<CustomField>
    <fullName>CRM_Level1__c</fullName>
    <label>1° Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CRM_Scope__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3D Secure</fullName>
            </value>
            <value>
                <fullName>Accesso</fullName>
            </value>
            <value>
                <fullName>Accesso e navigazione</fullName>
            </value>
            <value>
                <fullName>Accesso e navigazione IB</fullName>
            </value>
            <value>
                <fullName>Accesso e navigazione wizard</fullName>
            </value>
            <value>
                <fullName>Accesso IB</fullName>
            </value>
            <value>
                <fullName>Aggiornamento documento</fullName>
            </value>
            <value>
                <fullName>Aggiornamento prodotti</fullName>
                <isActive>false</isActive>
                <label>Aggiornamento prodotti</label>
            </value>
            <value>
                <fullName>Allineamento disponibilità</fullName>
            </value>
            <value>
                <fullName>Altre comunicazioni</fullName>
            </value>
            <value>
                <fullName>Altri prodotti e servizi</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
            <value>
                <fullName>Altro blocco</fullName>
            </value>
            <value>
                <fullName>Ambiente e logistica</fullName>
            </value>
            <value>
                <fullName>App Tocca a me</fullName>
            </value>
            <value>
                <fullName>Area riservata disattivata</fullName>
            </value>
            <value>
                <fullName>Assicurazioni</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Attivazione carta</fullName>
            </value>
            <value>
                <fullName>Biglietti</fullName>
            </value>
            <value>
                <fullName>Temporaneo</fullName>
                <label>Blocco Temporaneo</label>
            </value>
            <value>
                <fullName>Body Card</fullName>
            </value>
            <value>
                <fullName>Cambio Filiale</fullName>
            </value>
            <value>
                <fullName>Cambio IBAN</fullName>
            </value>
            <value>
                <fullName>Canali disponibili</fullName>
            </value>
            <value>
                <fullName>Caratteristiche prodotto</fullName>
            </value>
            <value>
                <fullName>Carte</fullName>
            </value>
            <value>
                <fullName>Carte di credito</fullName>
                <isActive>false</isActive>
                <label>Carte di credito</label>
            </value>
            <value>
                <fullName>Carte di debito</fullName>
                <isActive>false</isActive>
                <label>Carte di debito</label>
            </value>
            <value>
                <fullName>Carte prepagate</fullName>
                <isActive>false</isActive>
                <label>Carte prepagate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>