BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_Level2__c.field-meta.xml
<CustomField>
    <fullName>CRM_Level2__c</fullName>
    <label>2° Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CRM_Level1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3D Secure</fullName>
            </value>
            <value>
                <fullName>Acquisizione documenti</fullName>
            </value>
            <value>
                <fullName>Adeguata Verifica</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
            <value>
                <fullName>Anticipo fatture</fullName>
            </value>
            <value>
                <fullName>Apri Conto</fullName>
            </value>
            <value>
                <fullName>Attivazione carte</fullName>
            </value>
            <value>
                <fullName>Attivazione nuovo piano</fullName>
            </value>
            <value>
                <fullName>Biometria</fullName>
            </value>
            <value>
                <fullName>Biometria e Smart PIN</fullName>
            </value>
            <value>
                <fullName>Bollettini CBILL-PagoPa</fullName>
            </value>
            <value>
                <fullName>Bollettini MAV/RAV/Freccia</fullName>
            </value>
            <value>
                <fullName>Bollettini postali</fullName>
            </value>
            <value>
                <fullName>Bollo auto</fullName>
            </value>
            <value>
                <fullName>Bonifico</fullName>
            </value>
            <value>
                <fullName>Carta non funzionante</fullName>
            </value>
            <value>
                <fullName>Carte</fullName>
            </value>
            <value>
                <fullName>Carte di credito</fullName>
            </value>
            <value>
                <fullName>Carte di debito</fullName>
            </value>
            <value>
                <fullName>Carte prepagate</fullName>
            </value>
            <value>
                <fullName>Carte visualizzate</fullName>
            </value>
            <value>
                <fullName>Certificazione contatti</fullName>
            </value>
            <value>
                <fullName>Codice di sicurezza</fullName>
            </value>
            <value>
                <fullName>Codice utente</fullName>
            </value>
            <value>
                <fullName>Comprensibilità/Fruibilità</fullName>
            </value>
            <value>
                <fullName>Comunicazioni e documenti</fullName>
            </value>
            <value>
                <fullName>Condizioni e coperture</fullName>
            </value>
            <value>
                <fullName>Consensi</fullName>
            </value>
            <value>
                <fullName>Consensi Privacy</fullName>
            </value>
            <value>
                <fullName>Consutazione piani attivi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>