BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_Level3__c.field-meta.xml
<CustomField>
    <fullName>CRM_Level3__c</fullName>
    <label>3° Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CRM_Level2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3D Secure</fullName>
            </value>
            <value>
                <fullName>Accredito stipendio/pensione</fullName>
            </value>
            <value>
                <fullName>Aggiornamento documento d&apos;identità</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
            <value>
                <fullName>Area riservata disattivata</fullName>
            </value>
            <value>
                <fullName>Assegni</fullName>
            </value>
            <value>
                <fullName>Attivazione/disattivazione Posta on line</fullName>
            </value>
            <value>
                <fullName>Bollo auto e moto</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Caricamento/invio documenti</fullName>
            </value>
            <value>
                <fullName>Categorie</fullName>
            </value>
            <value>
                <fullName>Certificazione interessi passivi</fullName>
            </value>
            <value>
                <fullName>Codice di sicurezza</fullName>
            </value>
            <value>
                <fullName>Collegamento carta in rubrica</fullName>
            </value>
            <value>
                <fullName>Condizioni applicate</fullName>
            </value>
            <value>
                <fullName>Configurazione prodotti</fullName>
            </value>
            <value>
                <fullName>Consensi</fullName>
            </value>
            <value>
                <fullName>Consultazione</fullName>
            </value>
            <value>
                <fullName>Credenziali errate</fullName>
            </value>
            <value>
                <fullName>Disponibilità e archiviazione</fullName>
            </value>
            <value>
                <fullName>Domiciliazione utenze</fullName>
            </value>
            <value>
                <fullName>Estinzione Finanziamento</fullName>
            </value>
            <value>
                <fullName>Gestione ordini</fullName>
            </value>
            <value>
                <fullName>Importo rateizzato</fullName>
            </value>
            <value>
                <fullName>Impostazioni</fullName>
            </value>
            <value>
                <fullName>Info stato Pratica</fullName>
            </value>
            <value>
                <fullName>Inserimento</fullName>
            </value>
            <value>
                <fullName>Key6</fullName>
            </value>
            <value>
                <fullName>Modifica contatti</fullName>
            </value>
            <value>
                <fullName>Modifica rata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>