BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_Portale__c.field-meta.xml
<CustomField>
    <fullName>CRM_Portale__c</fullName>
    <label>Portali in cui visualizzare articolo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tutti</fullName>
            </value>
            <value>
                <fullName>Solo portale interno</fullName>
            </value>
            <value>
                <fullName>Solo portale esterno</fullName>
            </value>
            <value>
                <fullName>Solo portale Ex-UBI</fullName>
                <label>Solo portale Ex-Carige</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>