BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_ProductServiceAnomaly__c.field-meta.xml
<CustomField>
    <fullName>CRM_ProductServiceAnomaly__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Service Anomaly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>