BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_Question__c.field-meta.xml
<CustomField>
    <fullName>CRM_Question__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>