BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/CRM_Scope__c.field-meta.xml
<CustomField>
    <fullName>CRM_Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CRM_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aggiornamento prodotti</fullName>
            </value>
            <value>
                <fullName>Altre informazioni</fullName>
            </value>
            <value>
                <fullName>Altri prodotti e servizi</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
            <value>
                <fullName>Ambito migrazione</fullName>
            </value>
            <value>
                <fullName>Anagrafica BPERCard</fullName>
            </value>
            <value>
                <fullName>Area riservata e Smart BPERCard</fullName>
            </value>
            <value>
                <fullName>Assicurazioni</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Attivazione nuova plastica (sblocco Poker)</fullName>
            </value>
            <value>
                <fullName>Blocco/sblocco</fullName>
            </value>
            <value>
                <fullName>Carta Conto</fullName>
            </value>
            <value>
                <fullName>CBI</fullName>
            </value>
            <value>
                <fullName>Collaborazioni</fullName>
            </value>
            <value>
                <fullName>Comunicazioni cartacee</fullName>
            </value>
            <value>
                <fullName>Condizioni economiche</fullName>
                <label>Condizioni economiche/Info Operative</label>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Contatti uffici interni/centralino</fullName>
            </value>
            <value>
                <fullName>Contatto Private Banker</fullName>
            </value>
            <value>
                <fullName>Conti correnti</fullName>
            </value>
            <value>
                <fullName>Continuità operativa prodotti</fullName>
            </value>
            <value>
                <fullName>Conto On Demand</fullName>
            </value>
            <value>
                <fullName>DEM</fullName>
            </value>
            <value>
                <fullName>Documentazione ricevuta</fullName>
            </value>
            <value>
                <fullName>Documenti (EC, giacenza…)</fullName>
            </value>
            <value>
                <fullName>Eventi</fullName>
            </value>
            <value>
                <fullName>Filiale</fullName>
            </value>
            <value>
                <fullName>Filiali</fullName>
            </value>
            <value>
                <fullName>Finanziamenti</fullName>
            </value>
            <value>
                <fullName>Incassi e pagamenti aziendali</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>