BPER/DEVF/force-app/main/default/objects/Knowledge__kav/fields/Origine_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Origine_Opportunity__c</fullName>
    <label>Origine Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comparatori Online</fullName>
            </value>
            <value>
                <fullName>Ricontatti da DEM e Banner</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>BSTORE</fullName>
                <isActive>false</isActive>
                <label>BSTORE</label>
            </value>
            <value>
                <fullName>Campagna commerciale</fullName>
                <isActive>false</isActive>
                <label>Campagna commerciale</label>
            </value>
            <value>
                <fullName>Check Up</fullName>
                <isActive>false</isActive>
                <label>Check Up</label>
            </value>
            <value>
                <fullName>Estero</fullName>
                <isActive>false</isActive>
                <label>Estero</label>
            </value>
            <value>
                <fullName>Magazzino Finanziamenti</fullName>
                <isActive>false</isActive>
                <label>Magazzino Finanziamenti</label>
            </value>
            <value>
                <fullName>Self</fullName>
                <isActive>false</isActive>
                <label>Self</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>