BPER/DEVF/force-app/main/default/objects/Knowledge__kav/recordTypes/Anomalia.recordType-meta.xml
<RecordType>
    <fullName>Anomalia</fullName>
    <active>true</active>
    <label>Anomalia</label>
</RecordType>