BPER/DEVF/force-app/main/default/objects/Knowledge__kav/recordTypes/Articoli.recordType-meta.xml
<RecordType>
    <fullName>Articoli</fullName>
    <active>true</active>
    <label>Articoli</label>
</RecordType>