BPER/DEVF/force-app/main/default/objects/Knowledge__kav/recordTypes/Articoli_pubblici.recordType-meta.xml
<RecordType>
    <fullName>Articoli_pubblici</fullName>
    <active>true</active>
    <label>Articoli pubblici</label>
</RecordType>