BPER/DEVF/force-app/main/default/objects/Knowledge__kav/recordTypes/Breaking_News.recordType-meta.xml
<RecordType>
    <fullName>Breaking_News</fullName>
    <active>true</active>
    <label>Breaking News</label>
</RecordType>