BPER/DEVF/force-app/main/default/objects/Knowledge__kav/recordTypes/CRM_FAQ.recordType-meta.xml
<RecordType>
    <fullName>CRM_FAQ</fullName>
    <active>true</active>
    <label>F.A.Q.</label>
</RecordType>