BPER/DEVF/force-app/main/default/objects/Knowledge__kav/recordTypes/Misto.recordType-meta.xml
<RecordType>
    <fullName>Misto</fullName>
    <active>true</active>
    <label>Misto</label>
</RecordType>