BPER/DEVF/force-app/main/default/objects/Knowledge__kav/recordTypes/Opportunit_Knowledge.recordType-meta.xml
<RecordType>
    <fullName>Opportunit_Knowledge</fullName>
    <active>true</active>
    <label>Opportunità Knowledge</label>
</RecordType>