BPER/DEVF/force-app/main/default/objects/Knowledge__kav/validationRules/CRM_checkClassEOrigineForKnowldgeOpty.validationRule-meta.xml
<ValidationRule>
    <fullName>CRM_checkClassEOrigineForKnowldgeOpty</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND( RecordType.DeveloperName  = &apos;Opportunit_Knowledge&apos;,
OR(

ISBLANK(TEXT( Origine_Opportunity__c )))
),true,false)</errorConditionFormula>
    <errorMessage>Necessario valorizzare: Classificazione e Origine</errorMessage>
</ValidationRule>