BPER/DEVF/force-app/main/default/objects/Knowledge__kav/validationRules/Valorizzare_obbligatoriamente_il_portale.validationRule-meta.xml
<ValidationRule>
    <fullName>Valorizzare_obbligatoriamente_il_portale</fullName>
    <active>true</active>
    <errorConditionFormula>IsVisibleInPkb = true &amp;&amp;   ISPICKVAL( CRM_Portale__c , &apos;&apos;)</errorConditionFormula>
    <errorMessage>Selezionare su quale/i portale/i rendere visibile l&apos;articolo dopo la pubblicazione</errorMessage>
</ValidationRule>