BPER/DEVF/force-app/main/default/objects/Knowledge__kav/listViews/Articol_Ex_UBI.listView-meta.xml
<ListView>
    <fullName>Articol_Ex_UBI</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRM_Portale__c</field>
        <operation>equals</operation>
        <value>Solo portale esterno</value>
    </filters>
    <label>Articoli Solo Portale Esterno</label>
</ListView>