BPER/DEVF/force-app/main/default/objects/Knowledge__kav/listViews/Articoli_Ex_ISP.listView-meta.xml
<ListView>
    <fullName>Articoli_Ex_ISP</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRM_Portale__c</field>
        <operation>equals</operation>
        <value>Solo portale Ex-ISP</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.CRM_FAQ</value>
    </filters>
    <label>Articoli Portale Ex-ISP</label>
</ListView>