BPER/DEVF/force-app/main/default/objects/Knowledge__kav/listViews/Articoli_Solo_Portale_Ex_UBI.listView-meta.xml
<ListView>
    <fullName>Articoli_Solo_Portale_Ex_UBI</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>CRM_Cluster__c</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>ARCHIVED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRM_Portale__c</field>
        <operation>equals</operation>
        <value>Solo portale Ex-UBI</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1,2</value>
    </filters>
    <label>Articoli Solo Portale Ex-Carige</label>
</ListView>